# channel-sender/lib/channel_sender_ex/transport/rest/rest_controller.ex
@@ -23,6 +23,7 @@ defmodule ChannelSenderEx.Transport.Rest.RestController do
   get("/health", do: send_resp(conn, 200, "UP"))
   post("/ext/channel/create", do: create_channel(conn))
   post("/ext/channel/deliver_message", do: deliver_message(conn))
+  post("/ext/channel/deliver_batch", do: deliver_message(conn))
   match(_, do: send_resp(conn, 404, "Route not found."))
 
   defp create_channel(conn) do
@@ -60,6 +61,20 @@ defmodule ChannelSenderEx.Transport.Rest.RestController do
     route_deliver(conn.body_params, conn)
   end
 
+  defp route_deliver(_body = %{
+    messages: messages
+    }, conn) do
+
+    # takes N first messages and separates them into valid and invalid messages
+    {valid_messages, invalid_messages} = batch_separate_messages(messages)
+
+    valid_messages
+    |> perform_delivery
+
+    batch_build_response({valid_messages, invalid_messages}, messages, conn)
+
+  end
+
   defp route_deliver(
     message = %{
       channel_ref: channel_ref,
@@ -69,9 +84,52 @@ defmodule ChannelSenderEx.Transport.Rest.RestController do
       event_name: _event_name
      }, conn
    ) do
+    assert_deliver_request(message)
+    |> perform_delivery(%{"channel_ref" => channel_ref})
+    |> build_and_send_response(conn)
+  end
 
-    # assert that minimum required fields are present
-    is_valid = message
+  defp route_deliver(
+        message = %{
+          app_ref: app_ref,
+          message_id: _message_id,
+          correlation_id: _correlation_id,
+          message_data: _message_data,
+          event_name: _event_name
+        }, conn
+      ) do
+
+    assert_deliver_request(message)
+    |> perform_delivery(%{"app_ref" => app_ref})
+    |> build_and_send_response(conn)
+
+  end
+
+  defp route_deliver(
+    message = %{
+      user_ref: user_ref,
+      message_id: _message_id,
+      correlation_id: _correlation_id,
+      message_data: _message_data,
+      event_name: _event_name
+    }, conn
+  ) do
+
+    assert_deliver_request(message)
+    |> perform_delivery(%{"user_ref" => user_ref})
+    |> build_and_send_response(conn)
+
+  end
+
+  defp route_deliver(_, conn), do: invalid_body(conn)
+
+  #"""
+  # Asserts that the message is a valid delivery request
+  #"""
+  @spec assert_deliver_request(map()) :: {:ok, map()} | {:error, :invalid_message}
+  defp assert_deliver_request(message) do
+    # Check if minimal fields are present and not nil
+    result = message
     |> Enum.all?(fn {key, value} ->
       case key do
         :message_data ->
@@ -83,21 +141,123 @@ defmodule ChannelSenderEx.Transport.Rest.RestController do
       end
     end)
 
-    case is_valid do
+    case result do
       true ->
-        Task.start(fn -> PubSubCore.deliver_to_channel(channel_ref,
-          Map.drop(message, [:channel_ref]) |> ProtocolMessage.to_protocol_message)
-        end)
-        conn
-        |> put_resp_header("content-type", "application/json")
-        |> send_resp(202, Jason.encode!(%{result: "Ok"}))
-
+        {:ok, message}
       false ->
-        invalid_body(conn)
+        {:error, :invalid_message}
     end
   end
 
-  defp route_deliver(_, conn), do: invalid_body(conn)
+  defp perform_delivery(messages) when is_list(messages) do
+    Enum.map(messages, fn message ->
+      Task.start(fn ->
+        {channel_ref, new_msg} = Map.pop(message, :channel_ref)
+        PubSubCore.deliver_to_channel(channel_ref, ProtocolMessage.to_protocol_message(new_msg))
+      end)
+    end)
+  end
+
+  defp perform_delivery({:ok, message}, %{"channel_ref" => channel_ref}) do
+    Task.start(fn ->
+      new_msg = message
+      |> Map.drop([:channel_ref])
+      |> ProtocolMessage.to_protocol_message
+
+      PubSubCore.deliver_to_channel(channel_ref, new_msg)
+    end)
+    {202, %{result: "Ok"}}
+  end
+
+  defp perform_delivery({:ok, message}, %{"app_ref" => app_ref}) do
+    Task.start(fn ->
+      new_msg = message
+      |> Map.drop([:app_ref])
+      |> ProtocolMessage.to_protocol_message
+      PubSubCore.deliver_to_app_channels(app_ref, new_msg)
+    end)
+
+    {202, %{result: "Ok"}}
+  end
+
+  defp perform_delivery({:ok, message}, %{"user_ref" => user_ref}) do
+    Task.start(fn ->
+      new_msg = message
+      |> Map.drop([:user_ref])
+      |> ProtocolMessage.to_protocol_message
+      PubSubCore.deliver_to_user_channels(user_ref, new_msg)
+    end)
+
+    {202, %{result: "Ok"}}
+  end
+
+  defp perform_delivery(e = {:error, :invalid_message}, _) do
+    {400, e}
+  end
+
+  @spec batch_separate_messages([map()]) :: {[map()], [map()]}
+  defp batch_separate_messages(messages) do
+    {valid, invalid} = Enum.take(messages, 10)
+    |> Enum.map(fn message ->
+      case assert_deliver_request(message) do
+        {:ok, _} ->
+          {:ok, message}
+        {:error, _} ->
+          {:error, {message, :invalid_message}}
+      end
+    end)
+    |> Enum.split_with(fn {outcome, _detail} -> case outcome do
+        :ok -> true
+        :error -> false
+      end
+    end)
+
+    {
+      Enum.map(valid, fn {:ok, message} -> message end),
+      Enum.map(invalid, fn {:error, {message, _}} -> message end)
+    }
+  end
+
+  defp batch_build_response({valid, invalid}, messages, conn) do
+    original_size = length(messages)
+    l_valid = length(valid)
+    l_invalid = length(invalid)
+    case {l_valid, l_invalid} do
+      {0, 0} ->
+        build_and_send_response({400, nil}, conn)
+      {0, i} when i > 0 ->
+        build_and_send_response({400, %{result: "invalid-messages",
+        accepted_messages: 0,
+        discarded_messages: i,
+        discarded: invalid}}, conn)
+      {v, 0} ->
+        procesed = l_valid + l_invalid
+        discarded = original_size - procesed
+        msg = case discarded do
+          0 -> %{result: "Ok"}
+          _ -> %{result: "partial-success",
+            accepted_messages: v,
+            discarded_messages: discarded,
+            discarded: Enum.drop(messages, 10)}
+        end
+        build_and_send_response({202, msg}, conn)
+      {v, i} ->
+        build_and_send_response({202, %{result: "partial-success",
+          accepted_messages: v,
+          discarded_messages: i,
+          discarded: invalid}}, conn)
+    end
+  end
+
+  defp build_and_send_response({202, body}, conn) do
+    conn
+    |> put_resp_header("content-type", "application/json")
+    |> send_resp(202, Jason.encode!(body))
+  end
+
+  defp build_and_send_response({400, _}, conn) do
+    invalid_body(conn)
+  end
 
   @compile {:inline, invalid_body: 1}
   defp invalid_body(conn = %{body_params: invalid_body}) do
@@ -105,4 +265,5 @@ defmodule ChannelSenderEx.Transport.Rest.RestController do
     |> put_resp_header("content-type", "application/json")
     |> send_resp(400, Jason.encode!(%{error: "Invalid request", request: invalid_body}))
   end
+
 end
